Incorrect label for "Only Keyframes from Selected Channels". #108961

Closed
opened 2023-06-14 06:32:05 +02:00 by sanek122005 · 4 comments
First-time contributor

Blender Version
Broken: 3.6 beta

Short description of error
according to the name of the option "only keyframes from selected channels", the timeline should display keys only from selected channels. however, instead it only displays keys from the selected objects
Screenshot_20230614_072907.png

**Blender Version** Broken: 3.6 beta **Short description of error** according to the name of the option "only keyframes from selected channels", the timeline should display keys only from selected channels. however, instead it only displays keys from the selected objects ![Screenshot_20230614_072907.png](/attachments/cbecb502-80df-43be-a5ca-dc947d39d413)
sanek122005 added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-14 06:32:05 +02:00
Member

Can confirm. This seems to be a confusion of the label. The tool tip indicates it's for "selected objects/bones", so the label should really be "Only Keyframes from Selected".

cc @pablovazquez

Can confirm. This seems to be a confusion of the label. The tool tip indicates it's for "selected objects/bones", so the label should really be "Only Keyframes from Selected". cc @pablovazquez
YimingWu changed title from Incorrect name of the operator in the timeline to Incorrect label for "Only Keyframes from Selected Channels". 2023-06-14 08:10:18 +02:00
YimingWu added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-14 08:10:28 +02:00
Member

Tooltip could also be more specific: This is relevant for objects, bones, VSE sequences, nodes, greasepencil layers

Tooltip could also be more specific: This is relevant for objects, bones, VSE sequences, nodes, greasepencil layers
Member

Tooltip could also be more specific: This is relevant for objects, bones, VSE sequences, nodes, greasepencil layers

Agree. Maybe @dr.sybren could mention this in the next animation module meeting to come up with a label/tooltip for it.

> Tooltip could also be more specific: This is relevant for objects, bones, VSE sequences, nodes, greasepencil layers Agree. Maybe @dr.sybren could mention this in the next animation module meeting to come up with a label/tooltip for it.
Pablo Vazquez added
Module
Animation & Rigging
Interest
User Interface
and removed
Module
User Interface
labels 2023-06-19 12:21:09 +02:00

It was discussed in the Animation & Rigging module meeting. The conclusion was that this particular option should get the same label & description as the ‘selected only’ filter from the dopesheet / graph editor.

Internally it's a different option, but AFAIK it's the same behaviour, so having the labels & tooltips the same would be good for consistency.

It was discussed in the [Animation & Rigging module meeting](https://devtalk.blender.org/t/2023-06-22-animation-rigging-module-meeting/29968). The conclusion was that this particular option should get the same label & description as the ‘selected only’ filter from the dopesheet / graph editor. Internally it's a different option, but AFAIK it's the same behaviour, so having the labels & tooltips the same would be good for consistency.
Sybren A. Stüvel added this to the Animation & Rigging project 2023-07-18 11:40:38 +02:00
Christoph Lendenfeld self-assigned this 2023-07-28 11:57:57 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-03 14:16:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108961
No description provided.