Fix #108961: Wrong Label and Tooltip for Timeline

The property label on the Timeline for showing only channels
from selected objects was wrong,
indicating it shows only keyframes from selected channels.

This fixes it by using the same label and description as the dope sheet uses.

Pull Request: https://projects.blender.org/blender/blender/pulls/110569