source/blender/makesrna/intern/rna_scene.cc
@@ -8161,10 +8161,8 @@ void RNA_def_scene(BlenderRNA *brna)
   /* Timeline / Time Navigation settings */
   prop = RNA_def_property(srna, "show_keys_from_selected_only", PROP_BOOLEAN, PROP_NONE);
   RNA_def_property_boolean_negative_sdna(prop, nullptr, "flag", SCE_KEYS_NO_SELONLY);
-  RNA_def_property_ui_text(prop,
-                           "Only Keyframes from Selected Channels",
-                           "Consider keyframes for active object and/or its selected bones only "
-                           "(in timeline and when jumping between keyframes)");
+  RNA_def_property_ui_text(
+      prop, "Only Show Selected", "Only include channels relating to selected objects and data");
   RNA_def_property_update(prop, NC_SCENE | ND_FRAME, nullptr);
 
   /* Stamp */
